fix: verify bridge authorization boundaries